feat: support draft re-editing and furniture additions
